--- a/etp/src/app/dashboard/nav/nav.component.html
+++ b/etp/src/app/dashboard/nav/nav.component.html
@@ -1,121 +1,11 @@
-<!-- navbar  -->
-<nav class="navbar navbar-expand-lg navbar-dark top bg-dark" id="nav">
-  <div class="container-fluid">
-    <div class="etp">
-      <h1>ETP</h1>
-    </div>
-    <button
-      type="button"
-      mat-button
-      id="sidebarCollapse"
-      (click)="toggleClass()"
-      style="height: 8vh;"
-    >
-      <i class="fas fa-bars"></i>
-    </button>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <i class="fa fa-caret-down text-white" aria-hidden="true"></i>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="coins mx-3 my-auto nav-item">
-          <i class="fa fa-lock" aria-hidden="true"></i> 50.000
-          <small>IYTECOIN</small>
-        </li>
-        <li class="nav-item mx-3 my-auto">
-          <button class="reload nav-item">RELOAD</button>
-        </li>
-
-        <div class="mx-5"></div>
-        <div class="mx-5"></div>
-        <li class="nav-item mx-3 my-auto">
-          <i class="fas fa-solar-panel"></i>
-          <span> 2.6<small> KWH</small></span>
-        </li>
-        <li class="mx-3 my-auto nav-item">
-          <div
-            class="progress"
-            style="
-              height: 7vh !important;
-              background-color: transparent !important;
-            "
-          >
-            <i class="material-icons text-primary my-auto">
-              battery_charging_full
-            </i>
-            <div class="progress my-auto mx-1">
-              <span
-                class="progress-bar"
-                role="progressbar"
-                style="width: 50%;"
-                aria-valuenow="50"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              >
-              </span>
-            </div>
-          </div>
-        </li>
-        <!-- <div class="mx-5"></div> -->
-        <li class="ml-5 my-auto nav-item">
-          <i class="fa fa-info mx-2" aria-hidden="true"></i>
-          <i class="fa fa-envelope mx-2" aria-hidden="true"></i>
-          <i class="fa fa-bell mx-2" aria-hidden="true"></i>
-        </li>
-      </ul>
-
-      <div class="mx-3">
-        Username <i class="fa fa-caret-down" aria-hidden="true"></i>
-      </div>
-    </div>
-  </div>
-</nav>
-<!-- Sidebar  -->
 <div class="dash-wrapper">
-  <nav id="sidebar" [class]="sidetoggle">
-    <div class="sidebar-header">
-      <a class="navbar-brand" routerLink="/">
-        <img src="/" alt="logo" class="img-rounded" height="50px" />
-      </a>
-    </div>
-
-    <ul class="list-unstyled components">
-      <li (click)="dismiss()">
-        <a><i class="fas fa-cog"></i> Overview</a>
-      </li>
-      <li (click)="dismiss()">
-        <a> <i class="far fa-copy"></i> Energy Market </a>
-      </li>
-      <li (click)="dismiss()">
-        <a><i class="far fa-envelope-open"></i> Analytics </a>
-      </li>
-      <li (click)="dismiss()">
-        <a> <i class="fas fa-wallet font"></i> Rules</a>
-      </li>
-      <li (click)="dismiss()">
-        <a><i class="far fa-star"></i> History</a>
-      </li>
-      <li (click)="dismiss()">
-        <a> <i class="far fa-heart"></i> Settings</a>
-      </li>
-      <li (click)="dismiss()">
-        <a><i class="fas fa-user"></i> Solar Node</a>
-      </li>
-    </ul>
-  </nav>
+  <!-- Sidebar  -->
+  <etp-side></etp-side>
+  <!-- end of side  -->
 
   <div id="content">
+    <etp-topbar></etp-topbar>
     <div id="dashcomps"></div>
+    <etp-stickybar></etp-stickybar>
   </div>
 </div>
-
-<div [class]="overlay" (click)="dismiss()"></div>
