--- a/etp/src/styles.scss
+++ b/etp/src/styles.scss
@@ -1,72 +1,5 @@
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
-@import "~@angular/material/theming";
-// Plus imports for other components in your app.
+@import "./variables.scss";
 
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-@include mat-core();
-
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$etp-primary: mat-palette($mat-indigo);
-$etp-accent: mat-palette($mat-pink, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-$etp-warn: mat-palette($mat-red);
-
-// Create the theme object (a Sass map containing all of the palettes).
-$etp-theme: mat-light-theme($etp-primary, $etp-accent, $etp-warn);
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include angular-material-theme($etp-theme);
-
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
-@import "~@angular/material/theming";
-// Plus imports for other components in your app.
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-@include mat-core();
-
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$etp-primary: mat-palette($mat-indigo);
-$etp-accent: mat-palette($mat-pink, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-$etp-warn: mat-palette($mat-red);
-
-// Create the theme object (a Sass map containing all of the palettes).
-$etp-theme: mat-light-theme($etp-primary, $etp-accent, $etp-warn);
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-
-@include angular-material-theme($etp-theme);
-$enable-grid-classes: false;
-$primary: #1f8efa;
-$secondary: #657d95;
-$success: #28a745;
-$danger: #dc3545;
-$info: #17a2b8;
-$warning: #ffc107;
-$light: #f8f9fa;
-$dark: #343a40;
-@import "bootstrap";
-
-$prmary: #1f8efa;
-$bg: #2f3b52;
-$big-bg: linear-gradient(90deg, #0c1425 100%, #242e42 0%);
-$textcol: #20293c;
 /* You can add global styles to this file, and also import other style files */
 * {
   outline: none !important;
@@ -93,6 +26,9 @@ body {
   color: white !important;
   line-height: 5px !important;
   letter-spacing: 1.2px;
+}
+.left {
+  left: 0px !important;
 }
 // home styling
 .home-wrapper {
@@ -216,7 +152,7 @@ body {
   p {
     cursor: pointer;
     margin: 5vh 0 0;
-    color: $bg;
+    color: $bg1;
     line-height: 1.2;
     font-size: 2vh !important;
     &:hover {
