--- a/etp/src/app/snippets/partials/sidebar/sidebar.component.html
+++ b/etp/src/app/snippets/partials/sidebar/sidebar.component.html
@@ -2,15 +2,16 @@
   <div class="etp sticky-top">
     <a href="#">ETP</a>
   </div>
-  <div class="sidebar-header sticky-top">
-    <img
-      src="/assets/img/avi.png"
-      alt="logo"
-      class="img-fluid rounded-circle mb-2"
-    />
-    <a class="mx-auto" routerLink="/"> Baris </a>
+  <div style="background-color: #242e42;" class="sticky-top">
+    <div class="sidebar-header">
+      <img
+        src="/assets/img/avi.png"
+        alt="logo"
+        class="img-fluid rounded-circle mb-2"
+      />
+      <a class="mx-auto" routerLink="/"> Baris </a>
+    </div>
   </div>
-
   <ul class="list-unstyled components">
     <li (click)="set.dismiss()">
       <a> <i class="fa fa-home" aria-hidden="true"></i> Overview</a>
