--- a/etp/src/app/snippets/partials/topmenu/topmenu.component.html
+++ b/etp/src/app/snippets/partials/topmenu/topmenu.component.html
@@ -14,7 +14,7 @@
   <div class="menu-item">
     <div class="item">
       <div class="h-50 w-25 mx-2">
-        <img src="/assets/img/panel.svg" alt="panel" class="img-fluid" />
+        <img src="/assets/svg/panel.svg" alt="panel" class="img-fluid" />
       </div>
       <span>2.6</span>
       <span class="subs">KWH</span>
