--- a/etp/src/app/auth/signup/signup.component.html
+++ b/etp/src/app/auth/signup/signup.component.html
@@ -69,7 +69,7 @@
         <button
           mat-raised-button
           (click)="signup()"
-          class="btn btn-block mt-4"
+          class="btn btn-block mt-2"
           *ngIf="isSignup"
           type="submit"
           i18n
@@ -79,7 +79,7 @@
         <button
           mat-raised-button
           type="button"
-          class="btn btn-block mt-4"
+          class="btn btn-block mt-2"
           *ngIf="isReg"
           type="submit"
           i18n
@@ -88,7 +88,7 @@
         </button>
       </form>
       <div class="forgot" *ngIf="isSignup">
-        <p i18n>
+        <p i18n class="font-weight-normal text-secondary">
           By clicking sign up, you agree to the Solar Bankers User Agreement,
           Privacy Policy, and Cookie Policy.
         </p>
