--- a/etp/src/app/snippets/partials/profilebar/profilebar.component.scss
+++ b/etp/src/app/snippets/partials/profilebar/profilebar.component.scss
@@ -1,4 +1,4 @@
-@import "../../../variables.scss";
+@import "../../../../variables.scss";
 .bar-wrapper {
   display: flex;
   align-items: stretch;
@@ -6,11 +6,22 @@
   padding-right: 15px;
   height: 100%;
 }
+::ng-deep .menu {
+  background: $grey !important;
+  button {
+    color: white !important;
+    height: 30px;
+    &:hover {
+      background-color: $primary !important;
+    }
+  }
+}
 .item {
   display: flex;
   align-items: stretch;
-  margin: 0;
   cursor: pointer;
+  padding: 0 10px;
+  text-align: center;
   .tabs {
     display: flex;
     align-items: center;
@@ -24,5 +35,10 @@
     transition: all 0.3s;
     border-radius: 4px;
     color: $secondary;
+    margin: 0 -16px;
+  }
+
+  &:hover {
+    background-color: $darkbg;
   }
 }
