--- a/etp/src/app/snippets/partials/profilebar/profilebar.component.html
+++ b/etp/src/app/snippets/partials/profilebar/profilebar.component.html
@@ -36,19 +36,19 @@
 
 <!-- drop downs  -->
 
-<mat-menu #userMenu="matMenu">
+<mat-menu #userMenu="matMenu" class="menu">
   <button mat-menu-item>Settings</button>
   <button mat-menu-item>Help</button>
 </mat-menu>
-<mat-menu #notifMenu="matMenu">
+<mat-menu #notifMenu="matMenu" class="menu">
   <button mat-menu-item>Settings</button>
   <button mat-menu-item>Help</button>
 </mat-menu>
-<mat-menu #messageMenu="matMenu">
+<mat-menu #messageMenu="matMenu" class="menu">
   <button mat-menu-item>Settings</button>
   <button mat-menu-item>Help</button>
 </mat-menu>
-<mat-menu #helpMenu="matMenu">
+<mat-menu #helpMenu="matMenu" class="menu">
   <button mat-menu-item>Settings</button>
   <button mat-menu-item>Help</button>
 </mat-menu>
