--- a/etp/src/app/auth/authhome/authhome.component.html
+++ b/etp/src/app/auth/authhome/authhome.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div
-    class="col-lg-7 col-md-5"
+    class="col-lg-7"
     style="box-shadow: 1px 0 20px #152138d0;"
     *ngIf="!(set.isHandset$ | async) && !(set.isTablet$ | async)"
   >
@@ -13,7 +13,7 @@
       </div>
     </div>
   </div>
-  <div class="col-lg-5 col-md-7">
+  <div class="col-lg-5 mx-auto" [class.col-lg-12]="set.isTablet$ | async">
     <div class="container">
       <div class="auth-logo">
         <a href="" routerLink="">
