--- a/etp/src/app/dashboard/e-market/e-market.component.html
+++ b/etp/src/app/dashboard/e-market/e-market.component.html
@@ -1,1 +1,11 @@
-<p>e-market works!</p>
+<div class="wrap">
+  <div class="container">
+    <h2 class="dash-title">Energy Market</h2>
+    <div class="card dash-card">
+      <div class="card-body">
+        <h4 class="card-title">Title</h4>
+        <p class="card-text">Text</p>
+      </div>
+    </div>
+  </div>
+</div>
