--- a/etp/src/app/pages/home/home.component.html
+++ b/etp/src/app/pages/home/home.component.html
@@ -40,7 +40,7 @@
     </div>
     <div class="container-fluid">
       <div class="row">
-        <div [class.col-lg-6]="!(set.isTablet$ | async)">
+        <div [class.col-lg-6]="!(set.isTablet$ | async)" class="mx-auto">
           <div class="heading" [class.mobile]="set.isTablet$ | async">
             <h1 class="title" i18n [class.my-1]="set.isTablet$ | async">
               Welcome to <br />
