--- a/etp/src/app/snippets/partials/sidebar/sidebar.component.html
+++ b/etp/src/app/snippets/partials/sidebar/sidebar.component.html
@@ -9,29 +9,57 @@
         alt="logo"
         class="img-fluid rounded-circle mb-2"
       />
-      <a class="mx-auto" routerLink="/"> Baris </a>
+      <a class="mx-auto" routerLink="/dashboard"> Baris </a>
     </div>
   </div>
   <ul class="list-unstyled components">
-    <li (click)="set.dismiss()">
+    <li
+      (click)="set.dismiss()"
+      routerLink="/dashboard/overview"
+      routerLinkActive="active"
+    >
       <a> <i class="fa fa-home" aria-hidden="true"></i> Overview</a>
     </li>
-    <li (click)="set.dismiss()">
+    <li
+      (click)="set.dismiss()"
+      routerLink="/dashboard/energy-market"
+      routerLinkActive="active"
+    >
       <a> <i class="fa fa-cart-plus" aria-hidden="true"></i> Energy Market </a>
     </li>
-    <li (click)="set.dismiss()">
+    <li
+      (click)="set.dismiss()"
+      routerLink="/dashboard/analytics"
+      routerLinkActive="active"
+    >
       <a><i class="far fa-chart-bar"></i> Analytics </a>
     </li>
-    <li (click)="set.dismiss()">
+    <li
+      (click)="set.dismiss()"
+      routerLink="/dashboard/rules"
+      routerLinkActive="active"
+    >
       <a> <i class="fa fa-list-ul" aria-hidden="true"></i> Rules</a>
     </li>
-    <li (click)="set.dismiss()">
+    <li
+      (click)="set.dismiss()"
+      routerLink="/dashboard/history"
+      routerLinkActive="active"
+    >
       <a><i class="fa fa-history" aria-hidden="true"></i> History</a>
     </li>
-    <li (click)="set.dismiss()">
+    <li
+      (click)="set.dismiss()"
+      routerLink="/dashboard/settings"
+      routerLinkActive="active"
+    >
       <a> <i class="fa fa-cog" aria-hidden="true"></i> Settings</a>
     </li>
-    <li (click)="set.dismiss()">
+    <li
+      (click)="set.dismiss()"
+      routerLink="/dashboard/solar-nodes"
+      routerLinkActive="active"
+    >
       <a> <i class="fas fa-link" aria-hidden="true"></i> Solar Node</a>
     </li>
   </ul>
