updated energy market

--- a/etp/src/app/dashboard/analytics/analytics.component.html
+++ b/etp/src/app/dashboard/analytics/analytics.component.html
@@ -3,8 +3,12 @@
     <h2 class="dash-title">Analytics</h2>
     <div class="card dash-card">
       <div class="card-body">
-        <h4 class="card-title">Title</h4>
-        <p class="card-text">Text</p>
+        <div class="row">
+          <div class="col-lg-3 col-md-5 col-sm-12">
+            <p>Energy Consumption</p>
+          </div>
+          <div class="col-lg-9 col-md-7 col-sm-12"></div>
+        </div>
       </div>
     </div>
   </div>
