--- a/etp/src/app/auth/signup/signup.component.scss
+++ b/etp/src/app/auth/signup/signup.component.scss
@@ -6,8 +6,8 @@
     margin: 3vh 0 !important;
     text-align: center;
     cursor: context-menu;
+    font-size: 2vh !important;
   }
-  font-size: 1.5vh;
 }
 @media (max-width: 500px) {
   .forgot {
