--- a/etp/src/styles.scss
+++ b/etp/src/styles.scss
@@ -58,10 +58,10 @@ $etp-theme: mat-light-theme($etp-primary, $etp-accent, $etp-warn);
 $enable-grid-classes: false;
 $primary: #1f8efa;
 $secondary: #657d95;
-$success: #28a745;
+$success: #05c985;
 $danger: #dc3545;
 $info: #17a2b8;
-$warning: #ffc107;
+$warning: #ffab4f;
 $light: #f8f9fa;
 $dark: #343a40;
 @import "bootstrap";
@@ -205,16 +205,16 @@ body {
     font-weight: 300;
     font-size: 16px;
     border-radius: 4px;
-    box-shadow: inset 2px 2px 5px $bg1, inset -5px -5px 10px $grey;
+    box-shadow: inset 2px 2px 5px $bg1, inset -5px -5px 10px $darkbg;
     &:focus {
       background-color: $darkbg;
       box-shadow: none;
-      border-color: $primary !important;
+      border: 1px solid $primary !important;
     }
   }
   input {
     width: 44vh;
-    height: 4.5vh;
+    height: 4vh;
   }
 }
 .forgot {
@@ -253,7 +253,6 @@ body {
 .dash-card {
   background-color: $bg1;
   border-radius: 0;
-  min-height: 40vh;
   color: white;
 }
 
