--- a/etp/src/variables.scss
+++ b/etp/src/variables.scss
@@ -1,7 +1,6 @@
 $primary: #1f8efa;
 $bg1: #2f3b52;
 $big-bg: linear-gradient(90deg, #0c1425 100%, #242e42 0%);
-$textcol: #20293c;
 $bg2: #242e42;
 $grey: #3e4e6c;
 $darkbg: #20293c;
@@ -10,3 +9,4 @@ $sidetext: #98a7b9;
 $sidehover: #131a27;
 $secondary: #657d95;
 $shade1: #44556b;
+$shade2: #869aac;
