--- a/etp/src/app/dashboard/nav/nav.component.html
+++ b/etp/src/app/dashboard/nav/nav.component.html
@@ -5,7 +5,7 @@
   <etp-topbar></etp-topbar>
   <div id="content" [class]="set.sidetoggle">
     <div id="dashcomps">
-      <div class="container-fluid">
+      <div>
         <router-outlet></router-outlet>
       </div>
     </div>
